--- a/app/src/main/res/layout/fragment_add_address.xml
+++ b/app/src/main/res/layout/fragment_add_address.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/edt_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Họ và tên" />
+                    android:hint="@string/full_name" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:hint="Số điện thoại" />
+                    android:hint="@string/phone_number" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginTop="16dp"
-                android:hint="Địa chỉ chi tiết"
+                android:hint="@string/address_detail"
                 android:paddingTop="15dp"
                 android:paddingStart="15dp"
                 android:textColorHint="#D1D8DD"
