--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -36,7 +36,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:shadowRadius="40"
-                android:text="Thêm mặt hàng"
+                android:text="@string/add_to_cart_more"
                 android:textSize="14dp"
                 android:textColor="#171725"
                 android:backgroundTint="#ECF1F6"/>
@@ -44,7 +44,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Phổ biến"
+                android:text="@string/popular_text"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold"
@@ -62,7 +62,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Ghi chú đặt hàng"
+                android:text="@string/note_tile"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold"
@@ -93,7 +93,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="24dp"
-                    android:text="Thêm khuyến mãi"
+                    android:text="@string/discount"
                     android:textColor="#000000"
                     android:textSize="16dp"
                     android:textStyle="bold"/>
@@ -102,7 +102,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="24dp"
-                    android:text="Xem thêm"
+                    android:text="@string/see_more"
                     android:textAlignment="textEnd"
                     android:textColor="#F44849"
                     android:textSize="16dp"/>
@@ -120,7 +120,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Chi tiết thanh toán"
+                android:text="@string/payment_details"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:textStyle="bold"
@@ -133,7 +133,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Tạm tính"
+                    android:text="@string/subtotal"
                     android:textSize="16dp"
                     android:textColor="#9CA4AB"/>
 
@@ -156,7 +156,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Giảm giá"
+                    android:text="@string/discount_money"
                     android:textSize="16dp"
                     android:textColor="#9CA4AB"/>
 
@@ -178,7 +178,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Tổng"
+                    android:text="@string/total"
                     android:textSize="16dp"
                     android:textColor="#9CA4AB"/>
 
@@ -198,7 +198,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_margin="16dp"
                 android:layout_height="56dp"
-                android:text="Tiếp tục"/>
+                android:text="@string/continute"/>
 
         </LinearLayout>
 
