--- a/app/src/main/res/layout/fragment_cart_pay_now.xml
+++ b/app/src/main/res/layout/fragment_cart_pay_now.xml
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:layout_marginTop="16dp"
-                    android:text="Ghi chú đặt hàng"
+                    android:text="@string/note_tile"
                     android:textColor="@color/black"
                     android:textSize="16dp"
                     android:textStyle="bold"
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_margin="16dp"
-                    android:hint="Nhập nội dung"
+                    android:hint="@string/note_hint"
                     android:paddingTop="15dp"
                     android:paddingStart="15dp"
                     android:textColorHint="#D1D8DD"
@@ -64,7 +64,7 @@
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="24dp"
-                        android:text="Thêm khuyến mãi"
+                        android:text="@string/add_promo"
                         android:textColor="#000000"
                         android:textSize="16dp"
                         android:textStyle="bold"/>
@@ -73,7 +73,7 @@
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="24dp"
-                        android:text="Xem thêm"
+                        android:text="@string/see_more"
                         android:textAlignment="textEnd"
                         android:textColor="#F44849"
                         android:textSize="16dp"/>
@@ -91,7 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:layout_marginTop="16dp"
-                    android:text="Chi tiết thanh toán"
+                    android:text="@string/payment_details"
                     android:textColor="@color/black"
                     android:textSize="16dp"
                     android:textStyle="bold"
@@ -104,7 +104,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Tạm tính"
+                        android:text="@string/subtotal"
                         android:textSize="16dp"
                         android:textColor="#9CA4AB"/>
 
@@ -113,7 +113,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="200.000 đ"
                         android:textAlignment="textEnd"
                         android:textSize="16dp"
                         android:textStyle="bold"/>
@@ -127,7 +126,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Giảm giá"
+                        android:text="@string/discount_money"
                         android:textSize="16dp"
                         android:textColor="#9CA4AB"/>
 
@@ -136,7 +135,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="30.000 đ"
                         android:textAlignment="textEnd"
                         android:textSize="16dp"
                         android:textStyle="bold"/>
@@ -149,7 +147,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Tổng"
+                        android:text="@string/total"
                         android:textSize="16dp"
                         android:textColor="#9CA4AB"/>
 
@@ -158,7 +156,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="30.000 đ"
                         android:textAlignment="textEnd"
                         android:textSize="16dp"
                         android:textStyle="bold"
@@ -169,7 +166,7 @@
                     android:layout_width="match_parent"
                     android:layout_margin="16dp"
                     android:layout_height="56dp"
-                    android:text="Tiếp tục"/>
+                    android:text="@string/continute"/>
 
             </LinearLayout>
 
