--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -32,7 +32,7 @@
                 android:layout_below="@+id/imageView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
-                android:text="Đổi mật khẩu"
+                android:text="@string/change_password"
                 android:textColor="@color/black"
                 android:textSize="32sp"
                 android:textStyle="bold"
@@ -52,7 +52,7 @@
                     android:id="@+id/current_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Mật khẩu cũ" />
+                    android:hint="@string/current_pass" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -68,7 +68,7 @@
                     android:id="@+id/new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Mật khẩu mới" />
+                    android:hint="@string/new_password" />
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
@@ -84,7 +84,7 @@
                     android:id="@+id/confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Nhập lại mật khẩu mới" />
+                    android:hint="@string/confirm_password" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginTop="34dp"
-                android:text="Tiếp tục"
+                android:text="@string/continute"
                 android:textColor="@color/white"
                 android:layout_below="@+id/confirm_password_til"
                 android:id="@+id/btn_send"/>
