--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -37,7 +37,7 @@
                         android:layout_width="124dp"
                         android:layout_height="124dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ellipse" />
+                        android:src="@drawable/loading_img" />
 
                     <ImageView
                         android:id="@+id/update_avatar"
