--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -72,7 +72,7 @@
                                 android:id="@+id/Name_detail_food"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Cơm lứt bò sốt tiêu"
+                                android:text="@string/loading"
                                 android:textColor="@color/black"
                                 android:textSize="22sp"
                                 android:textStyle="bold" />
@@ -113,7 +113,7 @@
                                 android:id="@+id/m_t_"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Mô tả sản phẩm"
+                                android:text="@string/loading"
                                 android:textColor="@color/black"
                                 android:textSize="16sp" />
 
@@ -149,7 +149,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
                                 android:lineSpacingExtra="5sp"
-                                android:text="@string/k_ch_c_"
+                                android:text="@string/size"
                                 android:textColor="@color/black"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -177,7 +177,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
                                 android:lineSpacingExtra="5sp"
-                                android:text="Topping"
+                                android:text="@string/topping"
                                 android:textColor="@color/black"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -202,7 +202,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
                                 android:lineSpacingExtra="5sp"
-                                android:text="Bình luận"
+                                android:text="@string/comment"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
@@ -213,7 +213,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/lable_comment"
                                 android:drawableStart="@drawable/start"
-                                android:text="4.8 (1.2k đơn hàng)" />
+                                android:text="@string/loading" />
 
                             <TextView
                                 android:id="@+id/tv_see_all_comment"
@@ -221,7 +221,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
                                 android:drawableEnd="@drawable/icon_right"
-                                android:text="Xem tất cả "
+                                android:text="@string/see_all_text"
                                 android:textColor="@color/red" />
 
                             <androidx.recyclerview.widget.RecyclerView
@@ -239,7 +239,7 @@
                                 android:layout_below="@+id/tv_title_commemt"
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="10dp"
-                                android:text="Không có đánh giá nào"
+                                android:text="@string/no_comments_placeholder"
                                 android:textColor="@color/grey" />
 
                         </RelativeLayout>
@@ -319,7 +319,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Thêm vào giỏ hàng"
+                        android:text="@string/add_to_cart"
                         android:maxLines="1"
                         android:ellipsize="end"
                         android:textSize="7sp"
@@ -337,7 +337,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="0dp"
-                    android:text="mua ngay"
+                    android:text="@string/buy_now"
                     android:ellipsize="end"
                     android:layout_weight="1" />
 
