--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -46,7 +46,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:transformPivotY="10dp"
-                        android:hint="Search"
+                        android:hint="@string/search_hint_p"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         />
@@ -89,7 +89,7 @@
                         android:layout_marginRight="12dp"
                         android:paddingVertical="8dp"
                         android:drawableStart="@drawable/icon_sort"
-                        android:text="Sắp xếp"
+                        android:text="@string/sort_by"
                         android:drawableTint="@color/grey_black"/>
 
                     <TextView
@@ -100,7 +100,7 @@
                         android:paddingHorizontal="20dp"
                         android:layout_marginRight="12dp"
                         android:paddingVertical="8dp"
-                        android:text="Bán chạy" />
+                        android:text="@string/best_seller" />
 
                     <TextView
                         android:id="@+id/btn_top_rating"
@@ -110,7 +110,7 @@
                         android:paddingHorizontal="20dp"
                         android:layout_marginRight="12dp"
                         android:paddingVertical="8dp"
-                        android:text="Đánh giá" />
+                        android:text="@string/comment" />
 
                     <TextView
                         android:id="@+id/btn_price"
@@ -119,7 +119,7 @@
                         android:background="@drawable/background_border_gray_outline"
                         android:paddingHorizontal="20dp"
                         android:paddingVertical="8dp"
-                        android:text="Giá" />
+                        android:text="@string/price" />
 
                 </LinearLayout>
             </HorizontalScrollView>
