--- a/app/src/main/res/layout/fragment_tracking_order.xml
+++ b/app/src/main/res/layout/fragment_tracking_order.xml
@@ -32,7 +32,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="37dp"
                         android:layout_marginRight="32dp"
-                        android:text="Sắp tới rồi !!"
+                        android:text="@string/upcoming_arrival"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -40,7 +40,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="24dp"
                         android:layout_marginRight="32dp"
-                        android:text="Tài xế sẽ tới chỗ bạn trong 5 phút nữa"
+                        android:text="@string/driver_arriving"
                         android:textSize="16sp" />
 
 
@@ -130,7 +130,7 @@
                         <TextView
                             android:layout_width="181dp"
                             android:layout_height="21dp"
-                            android:text="Nguyễn Phú Cường"
+                            android:text="@string/loading"
                             android:id="@+id/shipper_name"
                             android:textSize="14dp"
                             android:textStyle="bold" />
@@ -138,7 +138,7 @@
                         <TextView
                             android:layout_width="181dp"
                             android:layout_height="21dp"
-                            android:text="sdt"
+                            android:text="@string/loading"
                             android:id="@+id/phone"
                             android:textSize="14dp"
                             android:textStyle="bold" />
@@ -163,7 +163,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:layout_marginTop="8dp"
-                    android:text="Bạn đợi chút! tôi đang tới chỗ bạn"
+                    android:text="@string/wait_a_moment"
                     android:textSize="16sp" />
     </LinearLayout>
     <include
