--- a/app/src/main/res/layout/item_call.xml
+++ b/app/src/main/res/layout/item_call.xml
@@ -19,7 +19,7 @@
         android:id="@+id/tv_call_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cuộc gọi thoại"
+        android:text="@string/call"
         android:maxLines="1"
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@+id/img_call"/>
