--- a/app/src/main/res/layout/item_coupons.xml
+++ b/app/src/main/res/layout/item_coupons.xml
@@ -11,7 +11,6 @@
         android:layout_marginTop="10dp"
         android:layout_width="157dp"
         android:layout_height="18dp"
-        android:text="Free"
         android:paddingLeft="5dp"
         android:textSize="12dp"
        />
@@ -23,7 +22,6 @@
         android:layout_width="157dp"
         android:layout_height="18dp"
         android:textSize="12dp"
-        android:text="Freeship tới 3km"
         android:paddingLeft="5dp"
        />
     <LinearLayout
@@ -36,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Hết hạn:"
+            android:text="@string/out_date"
             />
         <TextView
             android:id="@+id/tv_date"
@@ -44,7 +42,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="30/06/2021"
             android:gravity="center"/>
     </LinearLayout>
 </LinearLayout>
