--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginRight="5dp"
-        android:src="@drawable/ellipse" />
+        android:src="@drawable/logo_app" />
 
     <LinearLayout
         android:id="@+id/layout_title"
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
-            android:text="Đặt hàng thành công"
+            android:text="@string/loading"
             android:textColor="@color/black"
             android:textFontWeight="800"
             android:textSize="18sp" />
@@ -35,7 +35,7 @@
             android:paddingLeft="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="20/10/2023 | 20:00"
+            android:text="@string/loading"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -47,7 +47,7 @@
         android:ellipsize="end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You have canceled an order at Hut. We apologize for your inconvenience. We will try to improve our service next time 🥲"
+        android:text="@string/loading"
         android:textSize="16sp" />
 
 </RelativeLayout>
